@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 
-<addon id="plugin.video.zattooHiQ-2" version="1.6.9.6" name="Zattoo HiQ-2" provider-name="Steffen Rolapp">
+<addon id="plugin.video.zattooHiQ-2" version="1.6.9.8" name="Zattoo HiQ-2" provider-name="Steffen Rolapp">
 
   <requires>
     <import addon="xbmc.python" version="2.14.0"/>
